--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>geomesa-osm</groupId>
-    <artifactId>geomesa-osm</artifactId>
+    <artifactId>geomesa-osm-accumulo1.5</artifactId>
     <name>GeoMesa Open Street Map Example</name>
     <version>1.0.0</version>
 
