--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>geomesa-osm</groupId>
     <artifactId>geomesa-osm-accumulo1.5</artifactId>
     <name>GeoMesa Open Street Map Example</name>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <accumulo.version>1.5.0</accumulo.version>
