--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>geomesa-osm</groupId>
-    <artifactId>geomesa-osm-accumulo1.5</artifactId>
+    <artifactId>geomesa-osm</artifactId>
     <name>GeoMesa Open Street Map Example</name>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <geomesa.version>1.1.0-rc.6</geomesa.version>
         <accumulo.version>1.5.0</accumulo.version>
         <hadoop.version>2.2.0</hadoop.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <geotools.version>11.0</geotools.version>
+        <kafka.version>0.8.2.2</kafka.version>
+        <storm.version>0.9.6</storm.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>geomesa</groupId>
-            <artifactId>geomesa-core-accumulo1.5</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>org.locationtech.geomesa</groupId>
+            <artifactId>geomesa-accumulo-datastore</artifactId>
+            <version>${geomesa.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.accumulo</groupId>
@@ -71,15 +74,43 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.10</artifactId>
-            <version>0.8.0</version>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
-            <artifactId>storm</artifactId>
-            <groupId>storm</groupId>
-            <version>0.8.0</version>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>${storm.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>locationtech</id>
+            <url>https://repo.locationtech.org/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>geotools</id>
+            <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>boundlessgeo</id>
+            <url>http://repo.boundlessgeo.com/main</url>
+        </repository>
+        <repository>
+            <id>conjars.org</id>
+            <url>http://conjars.org/repo</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
